--- a/index.html
+++ b/index.html
@@ -1,3 +1,39 @@
----
-layout: home
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+
+  <body>
+    <div class="js-clock">
+      <h1>00:00</h1>
+    </div>
+
+    <form class="js_form form">
+      <input type="text" placeholder="What is your name" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+
+    <form class="js-toDoForm">
+      <input type="text" placeholder="write what you have to do!" />
+    </form>
+
+    <ul class="js-toDoList"></ul>
+    <span class="js-weather"></span>
+    <span class="js-covid"></span>
+
+    <script src="js/clock.js"></script>
+    <script src="js/greetings.js"></script>
+    <script src="js/todolist.js"></script>
+    <script src="js/bg.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/covid-copy.js"></script>
+  </body>
+</html>
