--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-<meta http-equiv="Access-Control-Allow-Origin" content="*">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,12 +16,12 @@
     </div>
 
     <form class="js_form form">
-      <input type="text" placeholder="What is your name" />
+      <input type="text" placeholder="이름이 모니?" />
     </form>
     <h4 class="js-greetings greetings"></h4>
 
     <form class="js-toDoForm">
-      <input type="text" placeholder="write what you have to do!" />
+      <input class="js-input" type="text" placeholder="해야할일을 끄적여보거라" />
     </form>
 
     <ul class="js-toDoList"></ul>
